chore: add a build script
Add a build script that injects the .env values inside the app at
compile time

--- a/powerpilot/Makefile
+++ b/powerpilot/Makefile
@@ -1,2 +1,11 @@
+.PHONY: build
 build:
-	go build -o tmp/powerpilot
+	./scripts/build.sh
+
+.PHONY: run
+run:
+	./tmp/powerpilot $(filter-out $@,$(MAKECMDGOALS))
+
+.PHONY: clean
+clean:
+	rm -f ./tmp/powerpilot
