feat: add make install target

--- a/powergo/Makefile
+++ b/powergo/Makefile
@@ -2,6 +2,10 @@
 build:
 	./scripts/build.sh
 
+.PHONY: install
+install: build
+	cp ./tmp/powergo $(shell go env GOPATH)/bin
+
 .PHONY: run
 run: build
 	./tmp/powergo $(filter-out $@,$(MAKECMDGOALS))
